alignment and others bugs fixed

--- a/static/style.css
+++ b/static/style.css
@@ -47,12 +47,16 @@ a:hover{
 }
 .second{
     display: grid;
-    margin: 50px 50px 80px 50px;
+    margin: 50px 50px 0px 50px;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    align-items: center;
+}
+.secondbottom{
+    padding:20px 50px ;
 }
 .third{
-    margin-bottom: 100px;
+    margin-bottom: 10px;
 }
 .third h1{
     text-align: center;
